<resources>
    <string name="app_name">Capstone</string>
    <string name="books_title">Books title</string>
    <string name="books_author">Books author</string>
    <string name="books_genre">Books genre</string>
    <string name="want_to_read">Want to read</string>
    <string name="read_more">Read More</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_discover">Discover</string>
    <string name="menu_library">Library</string>
    <string name="menu_account">Account</string>
    <string name="exp_fyp">for you page</string>
    <string name="exp_trending">trending now</string>
    <string name="username"> $username </string>
    <string name="name"> $name </string>
    <string name="bio"> $bio </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loginToolbar">Log in</string>
    <string name="email">email</string>
    <string name="passWord">password</string>
    <string name="btn_link_to_register">Sign Up</string>
    <string name="registerToolbar">Sign Up</string>
    <string name="btRegister">Sign Up</string>
    <string name="btn_link_to_login">Login</string>
    <string name="ideas">$ideas ideas</string>
    <string name="followers">$followers followers</string>
    <string name="following">$following following</string>
    <string name="overview">Books Overview</string>

    <string-array name="data_photo">
        <item>https://upload.wikimedia.org/wikipedia/commons/8/87/Ahmad_Dahlan.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/3/3f/Ahmad_Yani.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/e/ed/Bung_Tomo.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/b/be/Col_Gatot_Subroto%2C_Kenang-Kenangan_Pada_Panglima_Besar_Letnan_Djenderal_Soedirman%2C_p27.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/3/3a/Ki_Hadjar_Dewantara_Mimbar_Umum_18_October_1949_p2.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/VP_Hatta.jpg/330px-VP_Hatta.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Sudirman.jpg/486px-Sudirman.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Presiden_Sukarno.jpg/330px-Presiden_Sukarno.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/c/c3/Supomo_from_President_Website.JPG</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/TanMalaka_DariPendjara_ed3.jpg/330px-TanMalaka_DariPendjara_ed3.jpg</item>
    </string-array>
</resources>