<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.capstone.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.example.capstone.ui.discover.DiscoverFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.example.capstone.ui.library.LibraryFragment"
        android:label="@string/menu_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.capstone.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
</navigation>