<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.capstone.SignupActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerToolbar"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title_register"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18dp"/>

    </androidx.appcompat.widget.Toolbar>

    <!-- ALL THE REGISTER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginTop="50dp"
        android:layout_below="@id/register_toolbar"
        android:orientation="vertical">

        <!-- ENTER NAME -->
        <EditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name"/>

        <!-- ENTER EMAIL -->
        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <!-- ENTER PASSWORD -->
        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passWord"/>

        <!-- BUTTON FOR START THE REGISTER -->
        <Button
            android:id="@+id/btRegistrarse"
            android:theme="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btRegister"/>

        <!-- BUTTON FOR CHANGE TO THE LOGIN LAYOUT -->
        <Button
            android:id="@+id/btnLinkToLogIn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="#3f51b5"/>

    </LinearLayout>

</RelativeLayout>