<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.discover.DetailDiscover">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <TextView
        android:id="@+id/tv_set_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/books_title"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

      <ImageView
          android:id="@+id/img_item_photo"
          android:layout_width="140dp"
          android:layout_height="140dp"
          android:layout_marginRight="16dp"
          android:src="@android:color/darker_gray"/>

      <TextView
          android:id="@+id/tv_set_author"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/books_author" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_set_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="11dp" />

  </LinearLayout>

</ScrollView>