<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.account.AccountFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_toEndOf="@id/img_avatar"
        android:layout_toRightOf="@id/img_avatar"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_bio"
        android:layout_below="@id/tv_username"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@id/img_avatar"
        android:layout_toRightOf="@id/img_avatar"
        android:maxLines="2"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/tv_bio"
        android:layout_width="127dp"
        android:layout_height="35dp"
        android:layout_below="@id/tv_name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/img_avatar"
        android:layout_toRightOf="@id/img_avatar"
        android:maxLines="2"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:text="@string/bio" />


</androidx.constraintlayout.widget.ConstraintLayout>