<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"
        app:cardBackgroundColor="@color/pink"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="379dp"
            android:layout_height="360dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="28dp"
                android:src="@color/gray"
                app:civ_border_color="@color/gray"
                app:civ_border_width="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissiongConstraints " />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="44dp"
                android:ems="10"
                android:text="@string/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.105"
                app:layout_constraintStart_toEndOf="@+id/circleImageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/book_cover"
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:src="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

            <TextView
                android:id="@+id/book_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:text="@string/books_author"
                android:textSize="16dp"
                app:layout_constraintStart_toEndOf="@+id/book_cover"
                app:layout_constraintTop_toBottomOf="@+id/book_title" />

            <TextView
                android:id="@+id/book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"
                android:text="@string/books_title"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/book_cover"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="334dp"
                android:layout_height="169dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book_author">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="322dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/post"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/posts"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="16dp" />

                    <ImageView
                        android:id="@+id/post_image"
                        android:layout_width="73dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/post"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/post_ideas"
                        android:layout_width="166dp"
                        android:layout_height="34dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/ideas"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/post_image" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.cardview.widget.CardView>